# vdeplug4

./: CMakeLists.txt  Makefile.am  README.md  Uninstall.cmake  configure.ac  create_deb.sh
debian/: changelog  control  copyright  libvdeplug-dev.install  libvdeplug4.install  rules  vdeplug4.install
doc/: CMakeLists.txt  Makefile.am  howto_create_a_vdeplug_plugin
include/: CMakeLists.txt  Makefile.am  libvdeplug.h  libvdeplug_mod.h
libvdeplug4/: CMakeLists.txt  Makefile.am  canonicalize.c  libvdeplug.c  libvdeplug_bonding.c  libvdeplug_cmd.c  libvdeplug_hub.c  libvdeplug_macvtap.c  libvdeplug_multi.c  libvdeplug_netnode.c  libvdeplug_netnode.h  libvdeplug_null.c  libvdeplug_p2p.c  libvdeplug_ptp.c  libvdeplug_seqpacket.c  libvdeplug_switch.c  libvdeplug_tap.c  libvdeplug_udp.c  libvdeplug_vde.c  libvdeplug_vxhash.c  libvdeplug_vxhash.h  libvdeplug_vxlan.c  libvdeplug_vxvde.c  libvdestream.c  parseparms.c  vde_hashtable.c
libvdeplug4/libvdeplug2_legacy/: CMakeLists.txt  Makefile.am
libvdeplug4_static/: CMakeLists.txt  Makefile.am  libvdeplug.c
man/: CMakeLists.txt  Makefile.am  dpipe.1  libvdeplug.3  libvdeplug_bonding.1  libvdeplug_cmd.1  libvdeplug_hub.1  libvdeplug_macvtap.1  libvdeplug_multi.1  libvdeplug_null.1  libvdeplug_p2p.1  libvdeplug_ptp.1  libvdeplug_switch.1  libvdeplug_tap.1  libvdeplug_udp.1  libvdeplug_vde.1  libvdeplug_vxlan.1  libvdeplug_vxvde.1  vde_plug.1  vde_recv.3
srcvdeplug4/: CMakeLists.txt  Makefile.am  dpipe.c  openclosepidfile.c  openclosepidfile.h  selfsighandler.c  selfsighandler.h  vde_plug.c  vde_plug_iplog.c  vde_plug_iplog.h  vde_plug_log.c  vde_plug_log.h
